# picai_prep

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/picai_prep/: __init__.py  __main__.py  archive.py  case.py  converter.py  data_utils.py  dcm2dce.py  dcm2mha.py  errors.py  imagereader.py  mha2nnunet.py  nnunet2nndet.py  preprocessing.py  utilities.py
src/picai_prep/dcm2dce/: __init__.py  case.py  converter.py  dcm2dce.py
src/picai_prep/dcm2mha/: __init__.py  case.py  converter.py  dcm2mha.py  series.py  settings.py
src/picai_prep/examples/dcm2mha/: __init__.py  sample_archive.py
src/picai_prep/examples/mha2nnunet/: __init__.py  picai_archive.py  picai_archive_inference.py  picai_archive_search.py  sample_archive.py  sample_archive_inference.py
src/picai_prep/mha2nnunet/: __init__.py  case.py  converter.py  settings.py
src/picai_prep/resources/: dcm2mha_schema.json  dcm2mha_schema.py  dicom_tags.py  metadata.json  metadata.py  mha2nnunet_schema.json  mha2nnunet_schema.py
tests/: Development-README.md  __init__.py  test_archive_json_generation.py  test_dcm2dce.py  test_dcm2mha.py  test_mha2nnunet.py  test_nnunet2nndet.py  test_preprocessing.py
tests/input/: picai_prep.yaml
tests/output-expected/: dcm2mha_settings.json  mha2nnunet_inference_settings.json  mha2nnunet_inference_settings_picai.json  mha2nnunet_settings.json
tests/output-expected/mha/ProstateX-missing-slice/: dcm2mha_settings.json
(+2458 files in other folders)
