[metadata]
name = picai_prep
description = PICAI Preprocessing
author = Joeran Bosma, Stan Noordman, Anindo Saha and Matin Hosseinzadeh
license = Apache License, Version 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    picai_prep
install_requires =
    dataclasses
    jsonschema
    numpy
    pydicom
    scikit-image
    scikit-learn
    scipy
    SimpleITK
    tqdm
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
picai_prep = py.typed

[flake8]
max-line-length = 160
